--- a/ml.ipynb
+++ b/ml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -103,12 +103,15 @@
     "\n",
     "    print(f\" {dataset_name}.csv successfully downloaded and saved.\")\n",
     "\n",
-    "download_data(\"datasets\", \"salaries\")"
+    "download_data(\"datasets\", \"college\")\n",
+    "download_data(\"datasets\", \"exams\")\n",
+    "download_data(\"datasets\", \"cars\")\n",
+    "download_data(\"datasets\", \"mall\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -143,9 +146,7 @@
      ]
     }
    ],
-   "source": [
-    "download_data(save_folder=\"myfolder\", dataset_name=\"salaries\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
